--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Ma première page HTML</title>
-  <head>
+  </head>
   <body>
     <h1>Salut Github !</h1>
     <p>Rien de spécial à dire.</p>
-  <body>
+  </body>
 </html>
