--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Salut Github !</h1>
-    <p>Rien de spécial à dire.</p>
+    <p>Rien de spécil dire.</p>
+    <p> V2 </p>
   </body>
 </html>
